feat: add link controllers
