# models/api.go
@@ -1,24 +1,5 @@
 package models
 
-import (
-	"database/sql"
-	"time"
-)
-
-// URL struct information about URL
-type URL struct {
-	ID        uint64       `json:"id,omitempty" gorm:"primary_key,autoIncrement,not null"`
-	URL       string       `json:"url,omitempty"`
-	ShortURL  string       `json:"short_url,omitempty"`
-	Expires   string       `json:"expires,omitempty"`
-	Visits    int          `json:"visits,omitempty"`
-	UserID    string       `json:"user_id,omitempty"`
-	IP        string       `json:"ip,omitempty"`
-	CreatedAt time.Time    `json:"created_at,omitempty" gorm:"not null"`
-	UpdatedAt time.Time    `json:"updated_at,omitempty" gorm:"not null"`
-	DeletedAt sql.NullTime `json:"deleted_at,omitempty" gorm:"index,not null"`
-}
-
 // QRCode struct
 type QRCode struct {
 	ID      uint64 `json:"id" gorm:"primary_key"`
@@ -35,4 +16,15 @@ type Message struct {
 // Error is used as the Response Body
 type Error struct {
 	Error ServiceError `json:"error"`
+}
+
+// LinkBody is the body of the link
+type LinkBody struct {
+	CustomURL   string `json:"customurl"`
+	Target      string `json:"target"`
+	Description string `json:"description"`
+	Reusable    *bool  `json:"reusable"`
+	Password    string `json:"password"`
+	ExpireIn    string `json:"expire_in"`
+	Domain      string `json:"domain"`
 }
